# src/routes/students.js
@@ -1,7 +1,8 @@
-const { students, getStudents } = require("../controllers/students")
+const { students, getStudents, updatStudent } = require("../controllers/students")
 
 
 module.exports = (app) => {
     app.post("/students",students)
     app.get("/students/get",getStudents)
+    app.put('/update-student',updatStudent)
 }
