# src/routes/subject.js
@@ -1,7 +1,8 @@
-const { subject, getSubject } = require("../controllers/subject")
+const { subject, getSubject, updateSubject } = require("../controllers/subject")
 
 
 module.exports = (app) => {
     app.post("/subject",subject)
     app.get("/subject/get",getSubject)
+    app.put("/update-subject/",updateSubject)
 }
